--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aws-amplify": "^3.0.18",
+    "immer": "^7.0.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-stripe-elements": "^6.0.1",
-    "stripe": "^8.68.0",
+    "reactjs-popup": "^1.5.0",
+    "stripe": "^8.84.0",
     "uuid": "^8.2.0"
   },
   "scripts": {
